linear search improved

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <title>Algorithms</title>
-    <script src="linear-search.js"></script>
+    <script src="linear-search-improved.js"></script>
 </head>
 
 <body>
