--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <title>Algorithms</title>
-    <script src="0003-binary-search.js"></script>
+    <script src="0005-functional-classes.js"></script>
 </head>
 
 <body>
